# django-image

./: Dockerfile  LICENSE  README.md  entrypoint.sh
.github/workflows/: build-image.yml
django3.2/: pyproject.toml
django4.2/: pyproject.toml
django5.0/: pyproject.toml
django5.1/: pyproject.toml
