[tool.poetry]
name = "django42"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.2,<5.0"
django-cors-headers = "^4.3.1"
pytest-django = "^4.7.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
