[tool.poetry]
name = "django50"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = ">=5.0,<5.1"
django-cors-headers = "^4.3.1"
pytest-django = "^4.8.0"
gunicorn = "^21.2.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
