[tool.poetry]
name = "django50"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = ">=5.1,<5.2"
django-cors-headers = "^4.6.0"
pytest-django = "^4.9.0"
gunicorn = "^23.0.0"
django-environ = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
